--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -133,7 +133,7 @@ border: 1px solid black;
 }
 .carregando{
     text-align: center;
-    font-size: 80px;
+    font-size: 40px;
     font-weight: bold;
     color: red;
 }
@@ -181,4 +181,81 @@ button{
 .green{
     color: rgb(27, 181, 27);
     font-weight: bold;
+}
+
+
+.comunidade{
+    background-color: rgb(255, 166, 83);
+    
+}
+.nomes_upvotes{
+    background-color: aqua;
+}
+.v2{
+    margin-left: 15px;
+}
+.comments_box{
+    text-align: center;
+    font-size: large; 
+    flex-grow: 1;
+    margin-left: 15px;   
+}
+.caixa_comments{
+    border: 2px solid black;
+    width: 100%;
+    height: 100%;
+}
+.aberto{
+    display: flex;
+    flex-direction: row;
+}
+
+.nome_user{
+    font-weight: bold;
+}
+.responder{
+    float: right;
+    color: red;
+    font-weight: bold;
+    text-decoration: underline;
+}
+.box_de_comentar{
+    width: 900px;
+    border: 3px solid blue;
+    border-radius: 10px;
+}
+.enviar_comentario{
+    float:inline-end;
+    margin-right: 25%;
+    width: 100px;
+    height: 60px;
+    border-radius: 10px;
+}
+.comentario_individual{
+    border: 1px solid black;
+    height: 70px;
+    text-align: left;
+    background-color: rgb(241, 240, 239);
+}
+.reply{
+    background-color: antiquewhite;
+    margin-top: -18px;
+    border: 1px solid black;
+    height: 70px;
+    margin-left: 20px;
+    width: 95%;
+    text-align: left;
+}
+.total_comment{
+    display: block;
+    right: 0;
+    margin-top: 9px;
+    color: blue;
+    font-weight: bold;
+}
+.msg_icon{
+    width: 30px;
+    height: 30px;
+    float: right;
+    cursor: pointer;
 }
